# photos-to-slideshow

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-26-photos-to-slideshow.md  2026-05-15-reorder-ui.md
docs/superpowers/specs/: 2026-04-26-photos-to-slideshow-design.md  2026-05-15-reorder-ui-design.md
src/photos_to_slideshow/: audio.py  cli.py  errors.py  images.py  inputs.py  metadata.py  render.py  ui.py
src/photos_to_slideshow/static/: index.html  sortable.min.js
tests/: _helpers.py  test_audio.py  test_e2e.py  test_images.py  test_inputs.py  test_metadata.py  test_render.py  test_ui.py
